# tebako

./: .cirrus.yml  .clang-format  .gitattributes  .gitignore  .gitmodules  .rubocop.yml  .tebako.yml  Brewfile  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.adoc  CONTRIBUTING.adoc  Gemfile  INSTALLATION.adoc  LICENSE.md  README.adoc  Rakefile  common.env  tebako.gemspec
.github/: ubuntu-build.yml
.github/actions/setup-alpine/: action.yml
.github/actions/setup-macos/: action.yml
.github/actions/setup-tebako/: action.yml
.github/actions/setup-tebako-development/: action.yml
.github/actions/setup-tebako-development-msys/: action.yml
.github/actions/setup-tebako-integration-test/: action.yml
.github/actions/setup-tebako-integration-test-msys/: action.yml
.github/actions/setup-test-matrix/: action.yml
.github/actions/setup-ubuntu/: action.yml
.github/actions/test-package-fontist/: action.yml
.github/actions/test-package-fontist-windows/: action.yml
.github/actions/test-package-metanorma/: action.yml
.github/actions/test-package-metanorma-windows/: action.yml
.github/actions/test-set-1/: action.yml
.github/matrices/: alpine.json  macos.json  ubuntu.json  windows-msys.json
.github/scripts/: build_with_failure.sh  configure_with_failure.sh
.github/workflows/: alpine.yml  build-runtime-packages.yml  gem-test-and-release.yml  lint-and-rspec.yml  lint.yml  macos-arm64.yml  macos.yml  packed-mn.yml  ubuntu-build.yml  ubuntu.yml  windows-msys.yml
ci-scripts/: arm-brew-install.sh  arm-brew-install.zsh  arm-brew-setup.sh  level-up.sh  x86-brew-install.sh  x86-brew-setup.sh
cmake/: copy_dir.cmake  def_darwin_env.cmake  def_ext_prj.cmake  def_tty_colours.cmake  ensure_bundler.cmake  tebako-libtfs.cmake
doc/: DEV-NOTES.md
exe/: package  tebako  tebako-packager
ext/: Makefile  extconf.rb
include/: tebako-dfs.h  tebako-fs.h  tebako-main.h  tebako-mfs.h  tebako-version.h  tebako.h  version.h
include/tebako/: tebako-fs.h  tebako-main.h  tebako-prism.h  tpkg.h
lib/: cli.rb  package.rb  pass1.rb  pass1_patch_map.rb  pass2.rb  pass2_patch_map.rb  scripts.rb  tebako.rb
lib/tebako/: bootstrap_manager.rb  build_helpers.rb  cache_manager.rb  cli.rb  cli_helpers.rb  cli_rubies.rb  codegen.rb  deploy_helper.rb  error.rb  launcher_abi.rb  options_manager.rb  package_descriptor.rb  packager.rb  packager_lite.rb  patch_commands.rb  ruby_builder.rb  ruby_version.rb  runtime_deployer.rb  runtime_manager.rb  scenario_manager.rb  stitcher.rb  stripper.rb  tebako-packager  version.rb  windows_setup.rb
lib/tebako/package/: pass1.rb  pass2.rb
lib/tebako/packager/: pass1.rb  pass1_patch.rb  pass1a.rb  pass1a_patch.rb  pass2.rb  pass2_patch.rb  pass2_patch_crt.rb  pass2msys_patch.rb  patch.rb  patch_buildsystem.rb  patch_helpers.rb  patch_libraries.rb  patch_literals.rb  patch_main.rb  rubygems_patch.rb
patches/: 1.patch
patches/2.patch/: version.cpp  version.h
patches/ruby/: bd-patch.h  bigdecimal-patch.h  mainlibs-pass2.mk  mainlibs.mk  pass1.sh  pass2.sh  pre_config.sh
resources/: ruby_api_version.rb  ruby_program_version.rb  tebako-fs.cpp.in  tebako-runtime-0.1.1.gem  tebako-version.h.in  test-0.fs  version.h.in
resources/fs/: test-1.rb
spec/: build_helpers_spec.rb  cache_manager_spec.rb  cli_helpers_spec.rb  cli_rubies_spec.rb  cli_spec.rb  codegen_spec.rb  deploy_helper_spec.rb  error_spec.rb  options_manager_spec.rb  packager_descriptor_spec.rb  packager_lite_spec.rb  packager_spec.rb  ruby_builder_spec.rb  ruby_version_spec.rb  ruby_version_with_gemfile_spec.rb  runtime_deployer_spec.rb  scenario_manager_base_spec.rb  scenario_manager_spec.rb  scenario_manager_with_bundler_spec.rb  spec_helper.rb  stripper_spec.rb  version_spec.rb
spec/packager/: pass1_patch_spec.rb  pass1a_patch_spec.rb  pass2_patch_spec.rb  pass2msys_patch_spec.rb  patch_helpers_spec.rb  patch_spec.rb
spec/tebako/: bootstrap_manager_spec.rb  launcher_abi_spec.rb  runtime_manager_spec.rb  stitcher_spec.rb
src/: tebako-0.cpp  tebako-dfs-ops.cpp  tebako-dfs.cpp  tebako-main.cpp  tebako-mfs.cpp  tebako.cpp
tests-2/: Gemfile  tebako-test.rb
tests-2/fixtures/bundlerusage/: bundlerusage.rb
tests-2/fixtures/gems-bundler/: Gemfile  gems-bundler.rb
tests-2/fixtures/gems-byebug/: Gemfile  gems-byebug.rb
tests-2/fixtures/gems-excavate/: Gemfile  gems-excavate.rb
tests-2/fixtures/gems-expressir/: Gemfile  gems-expressir.rb
tests-2/fixtures/gems-libarchive-binary/: Gemfile  gems-libarchive-binary.rb
tests-2/fixtures/gems-libmspack/: Gemfile  gems-libmspack.rb
tests-2/fixtures/gems-nokogiri/: Gemfile  gems-nokogiri.rb
tests-2/fixtures/gems-psych-5/: Gemfile  gems-psych-5.rb
tests-2/fixtures/gems-sassc/: Gemfile  gems-sassc.rb
tests-2/fixtures/gems-seven-zip/: Gemfile  gems-seven-zip.rb
tests-2/fixtures/gems-seven_zip_ruby/: gems-seven_zip_ruby.rb
tests/scripts/: cross-tests.sh  functional-tests-app.sh  functional-tests-cross.sh  functional-tests.sh  launcher-abi-tests.sh  press-modes-tests.sh  press_with_failure.sh
tests/test-00/: test-0.sh  test-00.sh  test.rb
tests/test-01/: tebako-test-run.rb  test.rb
tests/test-06/: Gemfile  README.md  package.json
tests/test-07/: Gemfile
tests/test-09/: tebako-test-0.0.1.gem  tebako-test-0.0.2.gem
tests/test-1/: test-1.rb  test.rb
tests/test-11/: tebako-test-0.0.1.gem  tebako-test.gemspec
tests/test-12/: tebako-test-a.gemspec  tebako_test-a.gemspec  test-a.gemspec  test-b.gemspec
tests/test-13/: tebako-test.gemspec  tebako_test.gemspec  test.gemspec
tests/test-15/: Gemfile  tebako-bundle-test-0.0.1.gem  tebako-bundle-test.gemspec
tests/test-16/: Gemfile  tebako-bundle-test.gemspec
tests/test-18/: Gemfile  tebako-test-run.rb
tests/test-19/: Gemfile  tebako-test-run.rb
tests/test-20/: Gemfile  tebako-test-run.rb
tests/test-21/: Gemfile  tebako-test-run.rb
tests/test-22/: Gemfile  tebako-test-run.rb
tests/test-23/: Gemfile
tests/test-24/: Gemfile  tebako-bundle-test.gemspec
tests/test-25/: Gemfile  tebako-bundle-test.gemspec
tests/test-sh/: cli-tests.sh  cli_tests.sh
(+48 files in other folders)
